<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:orientation="vertical"
    android:layout_margin="20dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textAlignment="center"
        android:textSize="28sp"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_choose"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_marginBottom="12dp"
        />

    <Button
        android:id="@+id/operation_initialization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btn1"
        android:onClick="goto_OperationINI"
        />

    <Button
        android:id="@+id/operation_multipleSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btn2"
        android:layout_marginBottom="12dp"
        android:onClick="goto_OperationSUM"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_thread"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:layout_marginEnd="12dp"
            />

        <Spinner
            android:id="@+id/list_threads"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/el_threadNumbers"
            />


    </LinearLayout>

</LinearLayout>