<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.IniActivity"
    android:orientation="vertical"
    android:layout_margin="20dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btn1"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_marginBottom="12dp"
        />

    <TextView
        android:id="@+id/txt_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selected threads: 0"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="3dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Insert an initialization size"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="3dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        >

        <EditText
            android:id="@+id/editTxt_iniSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:text="@string/default_numbIni"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="20sp"
            android:text="@string/insert_mln"
            android:paddingTop="10dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/txt_timing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Timing: 0 msec"
        android:textAlignment="center"
        android:textSize="18sp"
        />

</LinearLayout>